<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/please_pick_what_type_of_jokes_you_would_like"
        android:textAppearance="@style/TextAppearance.MyTheme.Headline1"
        android:gravity="center"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_any"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/any"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_programming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type_any"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/programming"
        android:layout_gravity="center"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_misc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type_programming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/misc"
        android:layout_gravity="center"
        />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type_misc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dark"
        android:layout_gravity="center"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_pun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/type_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pun"
        android:layout_gravity="center"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_spooky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spooky"
        app:layout_constraintTop_toBottomOf="@id/type_pun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        />
    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/type_christmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/christmas"
        app:layout_constraintTop_toBottomOf="@id/type_spooky"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/joke_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_christmas"
        android:text="@string/got_jokes"/>


</androidx.constraintlayout.widget.ConstraintLayout>